--- a/.hgignore
+++ b/.hgignore
@@ -2,3 +2,4 @@ syntax: glob
 Create_Project_Directory.cmd
 Schematic_Component_Setup_Time_Study.xlsx
 Work Log - BlueGiga_BLE112_XBee_Module.xlsx
+Hardware/BOM/Bluegiga_BLE112_XBee_Module_BOM_wPricing.xlsx
