Updated PCB layout to put 2mm pin header at same location as the RN-41XV. Added silkscreen artwork to back of PCB. Added assembly pdf drawings and schematic pdf. Added OSH Park PCB render images.

--- a/.hgignore
+++ b/.hgignore
@@ -3,3 +3,4 @@ Create_Project_Directory.cmd
 Schematic_Component_Setup_Time_Study.xlsx
 Work Log - BlueGiga_BLE112_XBee_Module.xlsx
 Hardware/BOM/Bluegiga_BLE112_XBee_Module_BOM_wPricing.xlsx
+Hardware/OSH_Park_Script.bat
